// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata 1`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 8999379282028,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata 2`] = `
{
  "free": 10999472300000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata: events 1`] = `
[
  {
    "data": [
      {
        "Complete": {
          "proofSize": "(redacted)",
          "refTime": "(redacted)",
        },
      },
    ],
    "method": "Attempted",
    "section": "xcmPallet",
  },
]
`;

exports[`XCM tests for Mangata <-> Kusama Kusama transfer assets to mangata: system events 1`] = `
[
  {
    "data": {
      "count": "(redacted)",
    },
    "method": "DownwardMessagesReceived",
    "section": "parachainSystem",
  },
  {
    "data": {
      "messageId": "(redacted)",
      "outcome": {
        "Complete": "(redacted)",
      },
    },
    "method": "ExecutedDownward",
    "section": "dmpQueue",
  },
  {
    "data": {
      "dmqHead": "(redacted)",
      "weightUsed": {
        "proofSize": "(redacted)",
        "refTime": "(redacted)",
      },
    },
    "method": "DownwardMessagesProcessed",
    "section": "parachainSystem",
  },
]
`;

exports[`XCM tests for Mangata <-> Kusama mangata transfer assets to kusama 1`] = `
{
  "free": 9000000000000,
  "frozen": 0,
  "reserved": 0,
}
`;

exports[`XCM tests for Mangata <-> Kusama mangata transfer assets to kusama 2`] = `
{
  "flags": "0x80000000000000000000000000000000",
  "free": 10999909994200,
  "frozen": 0,
  "reserved": 0,
}
`;
